lexer_parser/src/test/exempleFile/miniJaja/success/writeInt.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du write/writeln	*/
/************************/

class writeInt {

	main {
        int x = 5;
        write(x);
        writeln(x);

	}
}