lexer_parser/src/test/exempleFile/miniJaja/fail/writeNumber.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du write/writeln	*/
/************************/

class writeNumber {

	main {
        write(5);
        writeln(5);

	}
}